assets/style/style.css
* {
    margin: 0;
    padding: 0;
}
:root {
    --primary-color: #FAFFFD;
    --secondary-color: #FAFFFD;
    --text-color: #342E37;
}
body {
    background-color: var(--primary-color);
    font-family: 'Signika Negative', sans-serif;
}
a {
    text-decoration: none;
}
ul {
    list-style: none;
}
h1 {
    text-shadow: 2px 2px black;
  }

/*-------------- Header Section -----------------*/
header {
    padding: 10px;
    background-color: var(--text-color);
    justify-content: space-between;
    display: flex;
    flex-wrap: wrap;
}
.header-text {
    margin: 10px;
    color: var(--primary-color);
}

nav ul li {
    display: inline-flex;
    padding: 10px;
    border-radius: 25px;
    border: 2px var(--primary-color) solid;
    box-shadow: 1px .5px .5px var(--primary-color);
}
nav ul li a{
    color: var(--primary-color);
}

/*-------------- Hero Section -----------------*/
.hero-section {
    height: 600px;
    background-image: url(../images/hero-picture.jpg); 
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.hero-section div {
    text-align: center;
    margin-top: 450px;
    height: 70px;
    float: left;
    color: var(--text-color);
    background-color: var(--secondary-color);
    border-radius: 25px;
    width: 600px;
    border: 2px var(--text-color) solid;
    box-shadow: 10px 5px 5px var(--text-color);
}
.hero-section p {
    margin-top: 12px;
    font-weight: bold;
}

/*-------------- About Me Section -----------------*/
.about {
    background-color: var(--primary-color);
    text-align: center;
}
.about div{
    display: flex;
    justify-content: center;
    padding: 10px;
}
.about h2{
    padding: 15px;
    border-bottom: 2px var(--text-color) solid;
    color: var(--text-color);
    width: 400px;
    background-color: var(--secondary-color);
    
}
.about-content {
    display: flex;
    justify-content: center;
    padding: 30px;

}
.about-content img {
    height: 200px;
    border: 2px var(--text-color) solid;
    border-radius: 25px;
    padding: 10px;
    background-color: var(--secondary-color);
    box-shadow: 10px 5px 5px var(--text-color);
}
.about-content p {
    text-align: center;
    width: 800px;
    padding: 50px;
    color: var(--text-color);
    background-color: var(--secondary-color);
    box-shadow: 10px 5px 5px var(--text-color);
    border: 2px var(--text-color) solid;
    border-radius: 25px;
}

/*-------------- My Work Section -----------------*/
.my-work {
    background-color: var(--primary-color);
    text-align: center;
    padding-left: 150px;
    padding-right: 150px;
}
.my-work div {
    display: flex;
    justify-content: center;
    padding: 10px;
}
.my-work h2 {
    padding: 15px;
    border-bottom: 2px var(--text-color) solid;
    color: var(--text-color);
    width: 400px;
    background-color: var(--secondary-color);
}
.my-work ul {
    display: flex;
    flex-wrap: wrap;
    margin-right: auto;
    margin-left: auto;
    justify-content: center;
}
.my-work img {
    height: 200px;
    border: 2px var(--text-color) solid;
    border-radius: 25px;
    margin: 25px;
    width: 300px;
    background-color: var(--secondary-color);
    padding: 5px;
    box-shadow: 10px 5px 5px var(--text-color);
}
.my-work p {
    padding: 10px;
    background-color: var(--text-color);
    color: var(--primary-color);
    border-radius: 25px;
    width: 200px;
    margin-bottom: 100px;
    margin-top: -100px;
    position: relative;
}
.featured-work {
    display: block;
    margin-right: 500px;
    margin-left: 500px;
}
.featured-work img {
    height: 300px;
    width: auto;
    flex-wrap: wrap;
    display: block;
}


/*-------------- Contact Section -----------------*/

.contact {
    background-color: var(--primary-color);
    text-align: center;
    display: flex;
    justify-content: center;
}
.contact h2 {
    padding: 40px;
    color: var(--text-color);
}
.contact ul {
    padding: 40px;
    border-left: none;
}
.contact ul li {
    padding: 5px;
    display: flex;
    align-items: center;
}
.contact ul li p {
    margin-right: 20px;
    font-weight: bold;
    color: var(--text-color);
}
.contact a {
    color: var(--text-color);
}

/*-------------- Footer Section -----------------*/

footer {
    text-align: center;
    padding: 20px;
    background-color: var(--text-color);
}
footer p {
    font-size: smaller;
    padding: 3px;
    color: var(--primary-color);
}
/* --------- Pseadu-classes and finctionality ---------- */

nav li:hover, nav a:hover{
    background-color: var(--primary-color);
    color: var(--text-color);
}
.contact ul li a:hover {
    font-weight: bold;
}
.my-work li img:hover{
    border: 5px solid var(--text-color);
}

/* ------ Mobile responsive features --------- */

@media (max-width: 800px) {
    .about-content{
        flex-wrap: wrap;
    }
    .hero-section div {
        display: flex;
        width: fit-content;
        flex-wrap: wrap;
        width: 300px;
        height: 110px;
        margin-top: 350px;
    }
    .featured-work img {
        height: 200px;
        width: auto;
    }
    .about h2 {
        width: 150px;
    }
    .hero-section {
        background-size: 800px;
        margin-top: -200px;
    }
    header {
        position: relative;
    }
  }

